@@ -602,6 +602,7 @@ Skip Montanaro
 Paul Moore
 Derek Morr
 James A Morrison
+Alessandro Moura
 Pablo Mouzo
 Ruslan Mstoi
 Sjoerd Mullender
